fix header bug on mobile, fix page title spacing issue, add message-box.scss

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -340,9 +340,6 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%; }
-  @media (max-width: 1199px) {
-    html, body {
-      margin-top: 37px; } }
 
 .body-container {
   margin: 0 auto;
@@ -1635,6 +1632,10 @@ html #addsearch-results .addsearch-result-item-sub h1 a {
   .new-mobile, html .row-fluid .new-mobile-contact, html .row-fluid .new-mobile-navigation, .new-mobile-group {
     display: none !important; } }
 
+@media (max-width: 1199px) {
+  .header-container-wrapper {
+    margin-top: 76px; } }
+
 .km-header {
   margin-bottom: 41px;
   -webkit-transition: all 0.5s ease;
@@ -1805,7 +1806,9 @@ input.header-search.header-search--open {
   border: none;
   text-align: center; }
   .km-page-header h1 {
-    margin-bottom: 0; }
+    margin-bottom: 0.75rem; }
+  .km-page-header p {
+    margin-bottom: 0.375rem; }
 
 .section-header {
   text-align: center; }
@@ -4246,6 +4249,26 @@ span.meter-tree-progress p {
 .km-thumb-title {
   font-size: 1rem;
   margin-top: 4px; }
+
+/* ============================================================
+   MESSAGE BOX
+/* ============================================================ */
+.message-box {
+  padding: 10px 20px;
+  border-radius: 6px;
+  font-size: 0.875rem;
+  position: relative;
+  padding-left: 50px; }
+  .message-box--warning {
+    border: 1px solid #FFA800;
+    background: #ffe0a3; }
+    .message-box--warning:before {
+      content: "\f071";
+      font-family: fontawesome;
+      position: absolute;
+      font-size: 20px;
+      left: 15px;
+      top: 16px; }
 
 /* ============================================================
    AWARDS
