--- a/styles/scss/base/_global.scss
+++ b/styles/scss/base/_global.scss
@@ -23,9 +23,9 @@ html, body {
   padding: 0;
   width: 100%;
 
-  @include respond-below('lg') {
-    margin-top: 37px;
-  }
+  // @include respond-below('lg') {
+  //   margin-top: 37px;
+  // }
 }
 
 .body-container {
